--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "13.4.13",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.2",
     "tailwindcss": "3.3.3"
