--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.2",
+    "swiper": "^10.2.0",
     "tailwindcss": "3.3.3"
   }
 }
